@@ -42,10 +42,15 @@ image:screenshot-add-volume.png["Capture d'écran de l'option Ajouter un volume 
 .. Le champ SVM (Storage VM) renseigne automatiquement le SVM en fonction du nom de votre environnement de travail.
 .. Entrez la taille du volume et sélectionnez une unité (Gio ou Tio). Notez que la taille du volume va augmenter en fonction de l'utilisation.
 .. Sélectionnez une règle de snapshots. Par défaut, un instantané est créé toutes les heures (en conservant les six dernières copies), tous les jours (en conservant les deux dernières copies) et toutes les semaines (en conservant les deux dernières copies).
-.. Vous pouvez éventuellement créer des balises pour catégoriser vos volumes en cliquant sur le signe plus et en saisissant un nom de balise et une valeur.
+.. Vous pouvez également créer des balises pour catégoriser vos volumes en cliquant sur le signe plus et en saisissant un nom de balise et une valeur.
+.. Si vous le souhaitez, sélectionnez l'option d'optimisation pour créer une FlexGroup et distribuer les données de volume au sein du cluster.
++
+
+NOTE: La distribution FlexGroup est disponible pour les protocoles de volume NFS et CIFS uniquement.
 
 
-. *Volumes Protocole* :
+
+. *Volumes protocole* :
 +
 .. Sélectionnez un protocole de volume NFS, CIFS ou iSCSI.
 +
@@ -131,6 +136,7 @@ image:screenshot-volume-protocol-iscsi.png["Capture d'écran de la configuration
 +
 image:screenshot_fsx_volume_usage_tiering.png["Capture d'écran de la configuration du profil d'utilisation et du Tiering pour FSX pour la création de volume ONTAP."]
 
+.. Si vous avez sélectionné optimisation (FlexGroup), vous devez spécifier le nombre de composants dans lesquels distribuer les données de volume. Nous recommandons vivement d'utiliser un nombre pair de composants pour assurer une distribution uniforme des données.
 
 
 . *Review* : passez en revue votre configuration de volume. Cliquez sur *Précédent* pour modifier les paramètres ou sur *Ajouter* pour créer le volume.
